<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry"
    android:background="@drawable/pic2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimaryLight"
        android:textSize="20sp"
        android:singleLine="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="6dp"
        android:paddingTop="2dp"
        android:paddingBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimaryLight"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:singleLine="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="6dp"
        android:paddingTop="2dp"
        android:paddingBottom="10dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_pswAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/again"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimaryLight"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:singleLine="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="6dp"
        android:paddingTop="2dp"
        android:paddingBottom="10dp"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:paddingStart="6dp"
            android:layout_gravity="center" />

        <RadioGroup
            android:id="@+id/GenerRadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="6dp">

            <RadioButton
                android:id="@+id/girl"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:textColor="@color/white"
                android:text="@string/girl"/>

            <RadioButton
                android:id="@+id/boy"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:textColor="@color/white"
                android:text="@string/boy"/>

        </RadioGroup>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/school"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimaryLight"
        android:textSize="20sp"
        android:maxLength="15"
        android:singleLine="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="6dp"
        android:paddingTop="2dp"
        android:paddingBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:layout_marginTop="30dp"/>

</LinearLayout>
