<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pic2"
    tools:ignore="RtlSymmetry"
    tools:context=".loginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimaryLight"
        android:textSize="20sp"
        android:maxLength="15"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="6dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimaryLight"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:maxLength="15"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingStart="6dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        android:textSize="30sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/newuser"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="100dp"
            android:text="@string/clause"
            android:textColor="@color/white"/>

    </RelativeLayout>

</LinearLayout>
